--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">kilometrowka</string>
-    <string name="hello_world">Hello world!</string>
+    <string name="app_name">Kilometrowka</string>
+    
+    <string name="kalendarz">Kalendarz</string>
+    <string name="raport">Raport</string>
+    <string name="ustawienia">Ustawienia</string>
+    
     <string name="action_settings">Settings</string>
 
 </resources>
