nie ma zapisywania do bazy

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,12 +5,16 @@
     <string name="kalendarz">Kalendarz</string>
     <string name="raport">Raport</string>
     <string name="ustawienia">Ustawienia</string>
-    <string name="action_settings">Settings</string>
+    <string name="action_settings">Dodaj Trase</string>
     <string name="pokazListeTras">Pokaz Liste Tras</string>
-
     <string name="trasa">Trasa:</string>
-    <string name="km">Przejechange KM:</string>
+    <string name="km">Przejechane KM:</string>
     <string name="samochod">Samochod:</string>
     <string name="data">Data:</string>
     <string name="delete">Delete:</string>
+    <string name="skad">Skąd:</string>
+    <string name="dokad">Dokąd:</string>
+    <string name="iloscKm">Ilość kilometrów:</string>
+    <string name="zapisz">Zapisz:</string>
+
 </resources>
