--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="ustawienia">Ustawienia</string>
     <string name="action_settings">Ustawienia</string>
     <string name="action_raport">Generuj Raport</string>
-    <string name="pokazListeTras">Pokaz Liste Tras</string>
+    <string name="pokazListeTras">Przeglądaj</string>
     <string name="trasa">Trasa:</string>
     <string name="km">Przejechane KM:</string>
     <string name="samochod">Samochod:</string>
@@ -16,10 +16,10 @@
     <string name="skad">Wpisz miasta:</string>
     <string name="dokad">Dokąd:</string>
     <string name="iloscKm">Ilość kilometrów:</string>
-    <string name="zapisz">Zapisz:</string>
+    <string name="zapisz">Zapisz</string>
     <string name="prywatny">Slużbowy</string>
     <string name="publiczny">Publiczny</string>
     <string name="kierowca">Kierowca</string>
     <string name="pasazer">Pasażer</string>
-    <string name="addcity">Dodaj miasto</string>
+    <string name="addcity">+</string>
 </resources>
